# gql-checker

./: Cargo.toml
src/: kotlin_parser.rs  main.rs  schema_parser.rs
src/gql_parser/: mod.rs  schema_parser.rs
src/kotlin_parser/: kotlin_parser.rs  mod.rs  queries.rs
test-files/: DataClass.kt  queries.graphqls  scalars.graphqls
