[package]
name = "graphql-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
graphql-parser = "0.4"
tree-sitter = "0.22"
tree-sitter-kotlin = "0.3.8"
walkdir = "2.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
colored = "2.0"
thiserror = "2.0.12"